src/objects/ExpUni_Tablero_Grupal__c.object
<CustomObject>
    <fields>
        <fullName>EU_001_Un_Valor__c</fullName>
        <label>Valor</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EU_001_nu_Real_Manual__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Campo real para ajuste manual</description>
        <label>Real Manual</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EU_001_tx_AtributoII__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Atributo II</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EU_001_tx_Atributo__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Concepto</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EU_001_tx_Indicador__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Indicador</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EU_Backlog__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Campo que se llena por mediante una formula  orientada a los montos de las oportunidades</description>
        <label>Backlog</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EU_Busca_Usuario__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Busqueda de Usuario Experiencia Única</description>
        <label>Usuario</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tablero_Grupales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EU_Compromiso__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Monto o meta a la que se comprete el Ejecutivo a cubrir en la RI</description>
        <label>Compromiso</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EU_Fe_Act__c</fullName>
        <description>Ultima fecha de actualizacion del Indicador</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Fe_Act</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EU_GAP__c</fullName>
        <description>Monto que proviene del Tablero de Gestión</description>
        <label>GAP</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EU_Indicador__c</fullName>
        <description>Indicador que proviene del Tablero de Gestión que define el tipo Cartera que se esta manejando.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Agrupador</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EU_Logro_Proy_Bklog__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Valor que se tiene como resultado del calculo del Backlog en un tiempo determinado</description>
        <label>Logro_Proy_Bklog</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EU_Logro_Proy_Comp__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Valor que se obtiene en base a un calculo del Logrado Proyectado definido por los Compromisos en un tiempo determinado</description>
        <label>Logro_Proy_Comp</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EU_Logro__c</fullName>
        <description>Valor que proviene del Tablero de Gestión y define el logro alcanzado por el Ejecutivo.</description>
        <label>Valor 2</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EU_Peso__c</fullName>
        <description>Tipo de moneda definido establecido en ese periodo de la generación del Tablero de Gestión</description>
        <label>Peso</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EU_Presupuesto__c</fullName>
        <description>Valor que se obtiene del Tablero de Gestión y es la cantidad que se tiene disponible el Ejecutivo</description>
        <label>Presupuesto</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EU_Puntos__c</fullName>
        <description>Valor que se obtiene del Tablero de Gestión y hace referencia a los puntos acumulados que tiene el Ejecutivo</description>
        <label>Puntos</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EU_Real__c</fullName>
        <description>Valor que se obtiene del Tablero de Gestión</description>
        <label>Real</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EU_UG__c</fullName>
        <description>Numero de identificador del usuario</description>
        <encryptionScheme>None</encryptionScheme>
        <label>UG</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_BPP_Codigo_Tablero__c</fullName>
        <description>Nuevo campo para identificar el código para la carga de tablero</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Código Tablero</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_BPP_NumEmpleado__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>MX_BPP_NumEmpleado__c</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MX_BPP_TableroID__c</fullName>
        <description>Nuevo campo para identificar código e identificador de tablero</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>BPyP Identificador Tablero</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MX_BPP_Valor3__c</fullName>
        <label>MX_BPP_Valor3__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_BPP_Valor4__c</fullName>
        <label>MX_BPP_Valor4__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_BPP_Valor5__c</fullName>
        <label>MX_BPP_Valor5__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_BPP_FechaCierre__c</fullName>
        <description>Fecha Cierre bpyp de tablero ri</description>
        <encryptionScheme>None</encryptionScheme>
        <label>BPyP Fecha Cierre</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MX_BPP_FechaIndicador__c</fullName>
        <description>Fecha indicador bpyp de tablero ri</description>
        <encryptionScheme>None</encryptionScheme>
        <label>BPyP Fecha Indicador</label>
        <type>Date</type>
    </fields>
    <label>Tablero de Gestión</label>
    <listViews>
        <fullName>MX_BPP_Cintillo</fullName>
        <columns>NAME</columns>
        <columns>MX_BPP_NumEmpleado__c</columns>
        <columns>EU_001_tx_Atributo__c</columns>
        <columns>EU_Logro__c</columns>
        <columns>MX_BPP_Valor4__c</columns>
        <columns>MX_BPP_Valor3__c</columns>
        <columns>EU_Compromiso__c</columns>
        <columns>EU_Logro_Proy_Comp__c</columns>
        <columns>EU_Indicador__c</columns>
        <columns>EU_Fe_Act__c</columns>
        <columns>MX_BPP_FechaCierre__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EU_Indicador__c</field>
            <operation>equals</operation>
            <value>Cintillo</value>
        </filters>
        <label>BPyP Cintillo</label>
    </listViews>
    <listViews>
        <fullName>MX_BPP_Tablero</fullName>
        <columns>MX_BPP_TableroID__c</columns>
        <columns>MX_BPP_Codigo_Tablero__c</columns>
        <columns>NAME</columns>
        <columns>EU_001_tx_Atributo__c</columns>
        <columns>EU_001_tx_Indicador__c</columns>
        <columns>EU_Real__c</columns>
        <columns>MX_BPP_Valor3__c</columns>
        <columns>MX_BPP_Valor4__c</columns>
        <columns>MX_BPP_Valor5__c</columns>
        <columns>EU_Logro_Proy_Bklog__c</columns>
        <columns>EU_Indicador__c</columns>
        <columns>EU_Fe_Act__c</columns>
        <columns>MX_BPP_FechaIndicador__c</columns>
        <columns>MX_BPP_FechaCierre__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EU_Indicador__c</field>
            <operation>equals</operation>
            <value>Tablero</value>
        </filters>
        <label>BPyP Tablero</label>
    </listViews>
    <nameField>
        <displayFormat>EV-{0000}</displayFormat>
        <label>Nombre de Tablero Grupal</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tablero de Gestión</pluralLabel>
    <recordTypes>
        <fullName>MX_BPP_Cintillo</fullName>
        <active>true</active>
        <label>MX_BPP_Cintillo</label>
    </recordTypes>
    <recordTypes>
        <fullName>MX_BPP_Tablero</fullName>
        <active>true</active>
        <description>Tablero para carga de RI de BPP</description>
        <label>MX_BPP_Tablero</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>